# autonomous-surgery

./: .gitignore  .gitmodules  Dockerfile  README.md  act.bash  act_normal.bash  convert.bash  debug.bash  docker-compose.yaml  eval.py  eval.sh  infer_client.py  infer_server.py  inference.bash  inference.py  pyproject.toml  requirements.txt  run_container.sh  setup.py  surpass.def  train.bash
Lift3d_act_install/: README.md  surpass.def
autonomous_surgery/config/: train_metaworld_act.yaml  train_representation_policy.yaml  train_representation_policy_debug.yaml
autonomous_surgery/dataset/: __init__.py  aloha_static_cups_dataset.py  cholecystectomy_dataset.py  chunk_wrapper.py  metaworld_dataset.py  pusht_dataset.py  rlbench_dataset.py
autonomous_surgery/envs/: __init__.py  dataset_evaluator.py  metaworld_env.py  rlbench_env.py
autonomous_surgery/helpers/: common.py  gymnasium.py  mujoco.py  pytorch.py
autonomous_surgery/loss/: act_chunk_loss.py  act_vae_loss.py
autonomous_surgery/models/: __init__.py  act_actor.py  act_actor_normal.py  act_rollout_buffer.py  actor.py
autonomous_surgery/scripts/: gen_cinematic_rlbench.py  gen_data_metaworld.py  gen_data_rlbench.py  make_video_metaworld.py  (+2 more)
lerobot_testing/: convert_dataset_v21_to_v30.py  inference.py  lerobot_testing.py  sanity_check_1.py  sanity_check_2.py  sanity_check_3.py  sanity_check_4.py  sanity_check_5.py  wandb_experiments.py
ros1_ws/: README.md
ros1_ws/src/representation_policy_ros/: CMakeLists.txt  package.xml
ros1_ws/src/representation_policy_ros/launch/: representation_policy_inference.launch  representation_policy_inference_grasp_only.launch
ros1_ws/src/representation_policy_ros/scripts/: representation_policy_node.py
scripts/: lift3d_example.py  train_metaworld.py  train_rlbench.py
(+83 files in other folders)
